--- a/index.html
+++ b/index.html
@@ -5,11 +5,46 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Car Sharing</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-
+<header class="header">
+    <div class="header-bar">
+        <div class="logo">
+            <img src="images/Icon%20Logo%20Normal.svg" class="header-logo-icon" alt="Logo firmy">
+            <h2 class="header-logo-name">Car <span class="header-logo-name-white">Sharing</span></h2>
+        </div>
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-list-item"><a href="">Home</a> </li>
+                <li class="navigation-list-item"><a href="">Blog</a></li>
+                <li class="navigation-list-item"><a href="">Service</a></li>
+                <li class="navigation-list-item"><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="header-info">
+        <h1 class="company-name">Car Sharing</h1>
+        <p class="company-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor dolorem, ducimus ipsum necessitatibus odit quidem sapiente sint vero voluptatum. Ab accusamus blanditiis earum excepturi natus suscipit voluptates! Accusamus, iste!</p>
+        <div class="buttons">
+            <button class="btn btn-primary">Share a car</button>
+            <button class="btn btn-secondary">Key Features</button>
+        </div>
+    </div>
+    <div class="arrow-down">
+        <svg xmlns="http://www.w3.org/2000/svg" width="21.077" height="21.624" viewBox="0 0 21.077 21.624">
+            <defs>
+                <style>.a{fill:#fff;}</style>
+            </defs>
+            <path class="a" d="M20.062,11.444l1.071,1.071a1.154,1.154,0,0,1,0,1.636l-9.378,9.382a1.154,1.154,0,0,1-1.636,0L.738,14.152a1.154,1.154,0,0,1,0-1.636l1.071-1.071a1.16,1.16,0,0,1,1.655.019l5.541,5.816V3.408A1.156,1.156,0,0,1,10.163,2.25h1.544a1.156,1.156,0,0,1,1.158,1.158V17.279l5.541-5.816a1.151,1.151,0,0,1,1.655-.019Z" transform="translate(-0.397 -2.25)"/>
+        </svg>
+    </div>
+</header>
 </body>
 </html>
