--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&family=Open+Sans:wght@200;300;400;500;600;700;800&display=swap"
           rel="stylesheet">
 </head>
 <body>
@@ -57,7 +57,7 @@
         <div class="article-container">
             <div class="article">
                 <img src="images/photo1.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
@@ -65,7 +65,7 @@
 
             <div class="article">
                 <img src="images/photo2.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
@@ -73,7 +73,7 @@
 
             <div class="article">
                 <img src="images/photo3.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
@@ -85,7 +85,7 @@
         <div class="article-container">
             <div class="service-article">
                 <img src="images/mini1.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
@@ -93,7 +93,7 @@
 
             <div class="service-article">
                 <img src="images/mini2.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
@@ -101,17 +101,41 @@
 
             <div class="service-article">
                 <img src="images/mini3.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
             </div>
             <div class="service-article">
                 <img src="images/mini4.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit.</h3>
+                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
                 <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
                     labore molestiae nobis perferendis quis sequi vel.</p>
                 <button class="btn-read-more">Read more</button>
+            </div>
+        </div>
+    </section>
+    <section class="blog form">
+        <h2 class="blog-header">Contact</h2>
+        <div class="form-container">
+            <img src="images/Form%20Photo.png" class="form-photo">
+            <div class="input-container">
+                <form class="form-input">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Type your name">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Type your e-mail"></input>
+                    <label for="message">Message</label>
+                    <textarea id="message" placeholder="Type your message"></textarea>
+                    <div class="checkbox-container">
+                        <label class="container">
+                            <input type="checkbox" checked="checked">
+                            <span class="checkmark"></span>
+                        </label>
+                        <p class="checkbox-text">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                    </div>
+                    <button class="btn-form">Send</button>
+                </form>
             </div>
         </div>
     </section>
