--- a/index.html
+++ b/index.html
@@ -14,130 +14,160 @@
           rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="header-bar">
-            <div class="logo">
-                <img src="images/Icon%20Logo%20Normal.svg" class="header-logo-icon" alt="Logo firmy">
-                <h2 class="header-logo-name">Car <span class="header-logo-name-white">Sharing</span></h2>
-            </div>
-            <nav class="navigation">
-                <ul class="navigation-list">
-                    <li class="navigation-list-item"><a href="">Home</a></li>
-                    <li class="navigation-list-item"><a href="">Blog</a></li>
-                    <li class="navigation-list-item"><a href="">Service</a></li>
-                    <li class="navigation-list-item"><a href="">Contact</a></li>
+<header class="header">
+    <div class="header-bar">
+        <div class="logo">
+            <img src="images/Icon%20Logo%20Normal.svg" class="header-logo-icon" alt="Logo firmy">
+            <h2 class="header-logo-name">Car <span class="header-logo-name-white">Sharing</span></h2>
+        </div>
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-list-item"><a href="">Home</a></li>
+                <li class="navigation-list-item"><a href="">Blog</a></li>
+                <li class="navigation-list-item"><a href="">Service</a></li>
+                <li class="navigation-list-item"><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="header-info">
+        <h1 class="company-name">Car Sharing</h1>
+        <p class="company-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor dolorem,
+            ducimus ipsum necessitatibus odit quidem sapiente sint vero voluptatum. Ab accusamus blanditiis earum
+            excepturi natus suscipit voluptates! Accusamus, iste!</p>
+        <div class="buttons">
+            <button class="btn btn-primary">Share a car</button>
+            <button class="btn btn-secondary">Key Features</button>
+        </div>
+    </div>
+    <div class="arrow-down">
+        <svg xmlns="http://www.w3.org/2000/svg" width="21.077" height="21.624" viewBox="0 0 21.077 21.624">
+            <defs>
+                <style>.a {
+                    fill: #fff;
+                }</style>
+            </defs>
+            <path class="a"
+                  d="M20.062,11.444l1.071,1.071a1.154,1.154,0,0,1,0,1.636l-9.378,9.382a1.154,1.154,0,0,1-1.636,0L.738,14.152a1.154,1.154,0,0,1,0-1.636l1.071-1.071a1.16,1.16,0,0,1,1.655.019l5.541,5.816V3.408A1.156,1.156,0,0,1,10.163,2.25h1.544a1.156,1.156,0,0,1,1.158,1.158V17.279l5.541-5.816a1.151,1.151,0,0,1,1.655-.019Z"
+                  transform="translate(-0.397 -2.25)"/>
+        </svg>
+    </div>
+</header>
+<section class="blog">
+    <h2 class="blog-header">Blog</h2>
+    <div class="article-container">
+        <div class="article">
+            <img src="images/photo1.png" class="article-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+
+        <div class="article">
+            <img src="images/photo2.png" class="article-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+
+        <div class="article">
+            <img src="images/photo3.png" class="article-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+    </div>
+</section>
+<section class="blog service">
+    <h2 class="blog-header">Service</h2>
+    <div class="article-container">
+        <div class="service-article">
+            <img src="images/mini1.png" class="service-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+
+        <div class="service-article">
+            <img src="images/mini2.png" class="service-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+
+        <div class="service-article">
+            <img src="images/mini3.png" class="service-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+        <div class="service-article">
+            <img src="images/mini4.png" class="service-image">
+            <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
+                labore molestiae nobis perferendis quis sequi vel.</p>
+            <button class="btn-read-more">Read more</button>
+        </div>
+    </div>
+</section>
+<section class="blog form">
+    <h2 class="blog-header">Contact</h2>
+    <div class="form-container">
+        <img src="images/Form%20Photo.png" class="form-photo">
+        <div class="input-container">
+            <form class="form-input">
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Type your name">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Type your e-mail"></input>
+                <label for="message">Message</label>
+                <textarea id="message" placeholder="Type your message"></textarea>
+                <div class="checkbox-container">
+                    <label class="container">
+                        <input type="checkbox" checked="checked">
+                        <span class="checkmark"></span>
+                    </label>
+                    <p class="checkbox-text">I hereby give consent for my personal data included in my application to be
+                        processed for the purposes of the recruitment process under the European Parliament’s and
+                        Council of the European Union Regulation on the Protection of Natural Persons as of 27 April
+                        2016, with regard to the processing of personal data and on the free movement of such data, and
+                        repealing Directive 95/46/EC (Data Protection Directive)</p>
+                </div>
+                <button class="btn-form">Send</button>
+            </form>
+        </div>
+    </div>
+</section>
+<section class="blog footer">
+    <div class="footer-container">
+
+        <div class="footer-logo">
+            <img src="images/Logo%20Footer.svg" class="header-logo-icon" alt="Logo firmy">
+            <h2 class="header-logo-name">Car <span class="header-logo-name-white">Sharing</span></h2>
+        </div>
+        <div class="copyright-container">
+            <nav class="footer-nav">
+                <ul class="left-nav">
+                    <li><a href="">Home Page</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Share regulation</a></li>
+                </ul>
+                <ul class="right-nav">
+                    <li><a href="">Price</a></li>
+                    <li><a href="">Our fleet</a></li>
+                    <li><a href="">Our clients</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </nav>
+            <p class="copyright">Copyright © Coders Lab</p>
         </div>
-        <div class="header-info">
-            <h1 class="company-name">Car Sharing</h1>
-            <p class="company-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor dolorem,
-                ducimus ipsum necessitatibus odit quidem sapiente sint vero voluptatum. Ab accusamus blanditiis earum
-                excepturi natus suscipit voluptates! Accusamus, iste!</p>
-            <div class="buttons">
-                <button class="btn btn-primary">Share a car</button>
-                <button class="btn btn-secondary">Key Features</button>
-            </div>
-        </div>
-        <div class="arrow-down">
-            <svg xmlns="http://www.w3.org/2000/svg" width="21.077" height="21.624" viewBox="0 0 21.077 21.624">
-                <defs>
-                    <style>.a {
-                        fill: #fff;
-                    }</style>
-                </defs>
-                <path class="a"
-                      d="M20.062,11.444l1.071,1.071a1.154,1.154,0,0,1,0,1.636l-9.378,9.382a1.154,1.154,0,0,1-1.636,0L.738,14.152a1.154,1.154,0,0,1,0-1.636l1.071-1.071a1.16,1.16,0,0,1,1.655.019l5.541,5.816V3.408A1.156,1.156,0,0,1,10.163,2.25h1.544a1.156,1.156,0,0,1,1.158,1.158V17.279l5.541-5.816a1.151,1.151,0,0,1,1.655-.019Z"
-                      transform="translate(-0.397 -2.25)"/>
-            </svg>
-        </div>
-    </header>
-    <section class="blog">
-        <h2 class="blog-header">Blog</h2>
-        <div class="article-container">
-            <div class="article">
-                <img src="images/photo1.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-
-            <div class="article">
-                <img src="images/photo2.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-
-            <div class="article">
-                <img src="images/photo3.png" class="article-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis nostrum officia perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-        </div>
-    </section>
-    <section class="blog service">
-        <h2 class="blog-header">Service</h2>
-        <div class="article-container">
-            <div class="service-article">
-                <img src="images/mini1.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-
-            <div class="service-article">
-                <img src="images/mini2.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-
-            <div class="service-article">
-                <img src="images/mini3.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-            <div class="service-article">
-                <img src="images/mini4.png" class="service-image">
-                <h3 class="blog-article-header">Lorem ipsum dolor sit</h3>
-                <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis deserunt et
-                    labore molestiae nobis perferendis quis sequi vel.</p>
-                <button class="btn-read-more">Read more</button>
-            </div>
-        </div>
-    </section>
-    <section class="blog form">
-        <h2 class="blog-header">Contact</h2>
-        <div class="form-container">
-            <img src="images/Form%20Photo.png" class="form-photo">
-            <div class="input-container">
-                <form class="form-input">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Type your name">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Type your e-mail"></input>
-                    <label for="message">Message</label>
-                    <textarea id="message" placeholder="Type your message"></textarea>
-                    <div class="checkbox-container">
-                        <label class="container">
-                            <input type="checkbox" checked="checked">
-                            <span class="checkmark"></span>
-                        </label>
-                        <p class="checkbox-text">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
-                    </div>
-                    <button class="btn-form">Send</button>
-                </form>
-            </div>
-        </div>
-    </section>
+    </div>
+</section>
 </body>
 </html>
